message(STATUS "Add Module RayTrace")
message(STATUS "###################################")

add_executable( RayTrace01
    RayTrace01.cpp
)
add_executable( RayTrace02
    RayTrace02.cpp
)
add_executable( RayTrace03
    RayTrace03.cpp
)
add_executable( RayTrace04
    RayTrace04.cpp
)
add_executable( RayTrace05
    RayTrace05.cpp
)
add_executable( RayTrace06
    RayTrace06.cpp
)
add_executable( RayTrace07
    RayTrace07.cpp
)
add_executable( RayTrace08
    RayTrace08.cpp
)
add_executable( RayTrace09
    RayTrace09.cpp
)
add_executable( RayTrace10
    RayTrace10.cpp
)
add_executable( RayTrace11
    RayTrace11.cpp
)
add_executable( RayTrace12
    RayTrace12.cpp
)
add_executable( RayTrace13
    RayTrace13.cpp
)
